🎉 init(config): complishing the configure

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,8 +18,8 @@ bind -n M-k select-pane -U # up
 bind -n M-j select-pane -D # down
 
 # Key bindings for creating panes
-bind-key 1 split-window -o # horizontal
-bind-key 2 split-window -e # verticle
+bind-key o split-window -h # horizontal
+bind-key e split-window -v # verticle
 
 # Seperator colors for current pane
 set-option -g pane-active-border-style fg=blue # foreground
@@ -52,12 +52,12 @@ set -g status-bg 'black' # background
 set -g status-fg 'white' # foreground
 
 # Contents on the right of the status bar
-set -g status-right "#[fg=magenta,bold] #{prefix_highlight}#[fg=red,bold]CPU: #{cpu_percentage} #[fg=blue]Battery: #{battery_percentage} #[fg=green]%a %Y:%m:%d %H:%M:%S "
+set -g status-right "#[fg=magenta,bold] #{prefix_highlight}#[fg=red,bold] #[fg=green]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load -m 2 --colors --powerline-right --interval 1)#[default] #[fg=green]%a %Y:%m:%d %H:%M:%S "
 set -g status-interval 1 # refresh every second
-set -g status-right-length 100 # maximum length for the right content of the status bar
+set -g status-right-length 100 # maximum length for the right content of the status bar 
 
 # Contents on the left of the status bar
-set -g status-left "#[fg=yellow,bold] ❐ #S   " # show the current session
+set -g status-left "#[fg=yellow,bold, bg=black] ❐ #S   " # show the current session
 set -g status-left-length 8 # maximum length for the left content of the status bar
 
 # Position of the status bar
@@ -135,6 +135,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-mem-cpu-load'
+set -g @plugin 'tmux-plugins/tmux-autoreload'
 
 
 # tmux-prefix_highlight configs
