✨ feat(plugins): add tmux-mode-indicator

--- a/tmux.conf
+++ b/tmux.conf
@@ -52,7 +52,7 @@ set -g status-bg 'black' # background
 set -g status-fg 'white' # foreground
 
 # Contents on the right of the status bar
-set -g status-right "#[fg=magenta,bold] #{prefix_highlight}#[fg=red,bold] #[fg=green]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load -m 2 --colors --powerline-right --interval 1)#[default] #[fg=green]%a %Y:%m:%d %H:%M:%S "
+set -g status-right "#[fg=magenta,bold] #{prefix_highlight}#[fg=red,bold] #[fg=green]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load -m 2 --colors --powerline-right --interval 1)#[default] #[fg=green]%a %Y:%m:%d %H:%M:%S #{tmux_mode_indicator}"
 set -g status-interval 1 # refresh every second
 set -g status-right-length 100 # maximum length for the right content of the status bar 
 
@@ -136,6 +136,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-autoreload'
+set -g @plugin 'tmux-plugins/tmux-mode-indicator'
 
 
 # tmux-prefix_highlight configs
