--- a/tmux.conf
+++ b/tmux.conf
@@ -30,7 +30,7 @@ set-option -g pane-border-style fg=cyan # foreground
 # set-option -g pane-border-style bg=white # background
 
 # Key bindings for closing panes
-bind-key 0 kill-pane
+# bind-key 0 kill-pane
 
 # Key bindings for adjusting panes size
 bind-key K resize-pane -U # up
@@ -52,9 +52,9 @@ set -g status-bg 'black' # background
 set -g status-fg 'white' # foreground
 
 # Contents on the right of the status bar
-set -g status-right "#[fg=magenta,bold] #{prefix_highlight}#[fg=red,bold] #[fg=green]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load -m 2 --colors --powerline-right --interval 1)#[default] #[fg=green]%a %Y:%m:%d %H:%M:%S #{tmux_mode_indicator}"
+set -g status-right "#[fg=magenta,bold] #{prefix_highlight}#[fg=red,bold] #[fg=green]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load -m 2 --colors --powerline-right --interval 1)  #[default] #[fg=green]%a %Y:%m:%d %H:%M:%S #{tmux_mode_indicator}"
 set -g status-interval 1 # refresh every second
-set -g status-right-length 100 # maximum length for the right content of the status bar 
+set -g status-right-length 130 # maximum length for the right content of the status bar 
 
 # Contents on the left of the status bar
 set -g status-left "#[fg=yellow,bold, bg=black] ❐ #S   " # show the current session
@@ -137,6 +137,9 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-autoreload'
 set -g @plugin 'tmux-plugins/tmux-mode-indicator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 
 # tmux-prefix_highlight configs
