✨ feat(plugin): new plugin for hostname and user status

--- a/tmux.conf
+++ b/tmux.conf
@@ -50,15 +50,15 @@ bind-key h select-pane -L # left
 # Colors for the status bar
 set -g status-bg 'black' # background
 set -g status-fg 'white' # foreground
-
+# right panel spliter  ,  
 # Contents on the right of the status bar
 set -g status-right "#[fg=magenta,bold] #{prefix_highlight}#[fg=red,bold] #[fg=green]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load -m 2 --colors --powerline-right --interval 1)  #[default] #[fg=green]%a %Y:%m:%d %H:%M:%S #{tmux_mode_indicator}"
 set -g status-interval 1 # refresh every second
 set -g status-right-length 130 # maximum length for the right content of the status bar 
-
+# left pannel spliter  , 
 # Contents on the left of the status bar
-set -g status-left "#[fg=yellow,bold, bg=black] ❐ #S   " # show the current session
-set -g status-left-length 8 # maximum length for the left content of the status bar
+set -g status-left "#[fg=cyan, bold, bg=black]#U@#H #[fg=red, bold,bg=black]#{?#{pane_ssh_connected},ssh, no-ssh} #[fg=yellow,bold, bg=black] ❐ #S"  #[fg=red]#{continuum_status}  " # show the current session
+set -g status-left-length 100 # maximum length for the left content of the status bar
 
 # Position of the status bar
 # (top/bottom)
@@ -79,7 +79,7 @@ bind-key s set status
 # ----- Windows -----
 
 # Status format for the current window
-setw -g window-status-current-format '#[fg=blue,bold]✔ #[fg=white,bold]#W'
+setw -g window-status-current-format ' #[fg=blue,bold]✔ #[fg=white,bold]#W'
 
 # Status format for other windows
 setw -g window-status-format '#[fg=white]#I #W'
@@ -133,19 +133,22 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # (recommended for better experience)
 # set -g @plugin 'tmux-plugins/tmux-battery'
 # set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-current-pane-hostname'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-mode-indicator'
 set -g @plugin 'tmux-plugins/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-autoreload'
-set -g @plugin 'tmux-plugins/tmux-mode-indicator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
-
 
 # tmux-prefix_highlight configs
 set -g @prefix_highlight_fg 'magenta' # default is 'colour231'
 set -g @prefix_highlight_bg 'black' # default is 'colour04'
 
+# auto saving configs
+# set -g @continuum-save-interval '20'
+# set -g @continuum-restore 'on'
 # Other plugins choices :
 # (<prefix> + I to install/upgrade plugins, tmux will freeze for several seconds during install)
 
