✨ feat(key-binds): add key-binds for HOME and END

--- a/tmux.conf
+++ b/tmux.conf
@@ -44,7 +44,8 @@ bind-key k select-pane -U # up
 bind-key j select-pane -D # down
 bind-key l select-pane -R # right
 bind-key h select-pane -L # left
-
+bind-key -n Home send Escape "OH"
+bind-key -n End send Escape "OF"
 # ----- Status Bar -----
 
 # Colors for the status bar
