✨ feat(tmuxinator): add configurations for tmuxinator

--- a/tmux.conf
+++ b/tmux.conf
@@ -58,7 +58,7 @@ set -g status-interval 1 # refresh every second
 set -g status-right-length 130 # maximum length for the right content of the status bar 
 # left pannel spliter  , 
 # Contents on the left of the status bar
-set -g status-left "#[fg=cyan, bold, bg=black]#U@#H #[fg=red, bold,bg=black]#{?#{pane_ssh_connected},ssh, no-ssh} #[fg=yellow,bold, bg=black] ❐ #S "  #[fg=red]#{continuum_status}  " # show the current session
+set -g status-left "#[fg=cyan, bold, bg=black]#U@#H #[fg=red, bold,bg=black]#{?#{pane_ssh_connected}, Remote, LocalHost} #[fg=yellow,bold, bg=black] ❐ #S "  #[fg=red]#{continuum_status}  " # show the current session
 set -g status-left-length 100 # maximum length for the left content of the status bar
 
 # Position of the status bar
@@ -104,6 +104,9 @@ bind-key C-l next-window
 
 # ----- More options -----
 
+# Shell config- set tmux shell to zsh
+set-option -g default-shell /bin/zsh
+
 # History limit for scrolling back
 set -g history-limit 5000
 
@@ -141,15 +144,13 @@ set -g @plugin 'tmux-plugins/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-autoreload'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'tmux-plugins/tmux-yank'
 
 # tmux-prefix_highlight configs
 set -g @prefix_highlight_fg 'magenta' # default is 'colour231'
 set -g @prefix_highlight_bg 'black' # default is 'colour04'
 
-# shell config 
-set-option -g default-shell /bin/zsh
-
+# Change bind key of the fuzzback
 
 # auto saving configs
 # set -g @continuum-save-interval '20'
