✨ feat(keylock check): temporary disabled caplocks

--- a/tmux.conf
+++ b/tmux.conf
@@ -53,7 +53,7 @@ set -g status-bg 'black' # background
 set -g status-fg 'white' # foreground
 # right panel spliter  ,  
 # Contents on the right of the status bar
-set -g status-right "#[fg=magenta,bold] #{prefix_highlight}#[fg=red,bold] #[fg=green]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load -m 2 --colors --powerline-right --interval 1)  #[default] #[fg=green]%a %Y-%m-%d %H:%M:%S #{tmux_mode_indicator}#[default]#{numlock}#{caplock}"
+set -g status-right "#[fg=magenta,bold] #{prefix_highlight}#[fg=red,bold] #[fg=green]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load -m 2 --colors --powerline-right --interval 1)  #[default] #[fg=green]%a %Y-%m-%d %H:%M:%S #{tmux_mode_indicator}#[default]"
 set -g status-interval 1 # refresh every second
 set -g status-right-length 130 # maximum length for the right content of the status bar 
 # left pannel spliter  , 
