✨ feat(tmux-yank): add new plugins for clipboard
and scripts for setting up the working environment

--- a/tmux.conf
+++ b/tmux.conf
@@ -144,7 +144,7 @@ set -g @plugin 'tmux-plugins/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-autoreload'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-# set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # tmux-prefix_highlight configs
 set -g @prefix_highlight_fg 'magenta' # default is 'colour231'
