🐞 fix(tmux-color): set disp mode to tmux-256color
fix color disp in tmux and nvim

--- a/tmux.conf
+++ b/tmux.conf
@@ -167,7 +167,7 @@ set -g @prefix_highlight_bg 'black' # default is 'colour04'
 
 # Easy logging and screen capturing for Tmux.
 # set -g @plugin 'tmux-plugins/tmux-logging'
-
+set-option -g default-terminal "tmux-256color"
 # A plugin that enhances tmux search:
 # set -g @plugin 'tmux-plugins/tmux-copycat'
 
