--- a/tmux.conf
+++ b/tmux.conf
@@ -123,7 +123,9 @@ set -s escape-time 0
 
 # Use vi styled keys for scrolling & copying
 set-window-option -g mode-keys vi
-
+# set pane and window start from zero
+set -g base-index 1
+setw -g pane-base-index 1
 
 # ----- Plugins -----
 
@@ -167,7 +169,7 @@ set -g @prefix_highlight_bg 'black' # default is 'colour04'
 
 # Easy logging and screen capturing for Tmux.
 # set -g @plugin 'tmux-plugins/tmux-logging'
-set-option -g default-terminal "tmux-256color"
+# set-option -g default-terminal "tmux-256color"
 # A plugin that enhances tmux search:
 # set -g @plugin 'tmux-plugins/tmux-copycat'
 
