data sync: modify: increase history length

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,7 +30,7 @@ set-option -g pane-border-style fg=cyan # foreground
 # set-option -g pane-border-style bg=white # background
 
 # Key bindings for closing panes
-# bind-key 0 kill-pane
+# bind-key C-q kill-pane
 
 # Key bindings for adjusting panes size
 bind-key K resize-pane -U # up
@@ -95,7 +95,7 @@ setw -g monitor-activity off
 set -g automatic-rename on
 
 # Key binding for closing windows
-bind-key q kill-window
+# bind-key M-q kill-window
 
 # Key binding for switching windows
 bind-key C-h previous-window
@@ -108,7 +108,7 @@ bind-key C-l next-window
 set-option -g default-shell /bin/zsh
 
 # History limit for scrolling back
-set -g history-limit 5000
+set -g history-limit 500000
 
 # Use mouse to switch windows, adjust panes, etc...
 set -g mouse on
