update network-speed tester

--- a/tmux.conf
+++ b/tmux.conf
@@ -53,9 +53,9 @@ set -g status-bg 'black' # background
 set -g status-fg 'white' # foreground
 # right panel spliter  ,  
 # Contents on the right of the status bar
-set -g status-right "#[fg=magenta,bold] #{prefix_highlight}#[fg=red,bold] #[fg=green]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load -m 2 --colors --powerline-right --interval 1)  #[default] #[fg=green]%a %Y-%m-%d %H:%M:%S #{tmux_mode_indicator}#[default]"
+set -g status-right "#[fg=magenta,bold] #{prefix_highlight}#[fg=red,bold] #[fg=green]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load -m 2 --colors --powerline-right --interval 1)  #[default] #{network_speed} #[fg=green]%a %Y-%m-%d %H:%M:%S #{tmux_mode_indicator}#[default]"
 set -g status-interval 1 # refresh every second
-set -g status-right-length 130 # maximum length for the right content of the status bar 
+set -g status-right-length 180 # maximum length for the right content of the status bar 
 # left pannel spliter  , 
 # Contents on the left of the status bar
 set -g status-left "#[fg=cyan, bold, bg=black]#U@#H #[fg=red, bold,bg=black]#{?#{pane_ssh_connected}, Remote, LocalHost} #[fg=yellow,bold, bg=black] ❐ #S "  #[fg=red]#{continuum_status}  " # show the current session
@@ -143,6 +143,7 @@ set -g @plugin 'tmux-plugins/tmux-current-pane-hostname'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-mode-indicator'
 set -g @plugin 'tmux-plugins/tmux-mem-cpu-load'
+set -g @plugin 'tmux-plugins/tmux-network-speed'
 set -g @plugin 'tmux-plugins/tmux-autoreload'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
@@ -153,7 +154,7 @@ set -g @prefix_highlight_fg 'magenta' # default is 'colour231'
 set -g @prefix_highlight_bg 'black' # default is 'colour04'
 
 # Change bind key of the fuzzback
-
+set -g @network_speed_interface 'eno1'
 # auto saving configs
 # set -g @continuum-save-interval '20'
 # set -g @continuum-restore 'on'
