--- a/tmux.conf
+++ b/tmux.conf
@@ -134,9 +134,7 @@ setw -g pane-base-index 1
 # (do not remove)
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
 # Built-in plugins of p-z-l/magicTmux
-# (recommended for better experience)
 # set -g @plugin 'tmux-plugins/tmux-battery'
 # set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-current-pane-hostname'
@@ -148,6 +146,7 @@ set -g @plugin 'tmux-plugins/tmux-autoreload'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'kristijan/tmux-fzf-pane-switch' # requirements tmux >= 3.3, fzf >= 0.53.0
 
 # tmux-prefix_highlight configs
 set -g @prefix_highlight_fg 'magenta' # default is 'colour231'
