update setup and configs

--- a/tmux.conf
+++ b/tmux.conf
@@ -62,8 +62,7 @@ set -g status-left "#[fg=cyan, bold, bg=black]#U@#H #[fg=red, bold,bg=black]#{?#
 set -g status-left-length 100 # maximum length for the left content of the status bar
 
 # Position of the status bar
-# (top/bottom)
-set -g status-position bottom
+set -g status-position bottom # top # 
 
 # Position of the window status
 # (left/centre/right)
@@ -110,8 +109,8 @@ set-option -g default-shell /bin/zsh
 # History limit for scrolling back
 set -g history-limit 500000
 
-# Use mouse to switch windows, adjust panes, etc...
 set -g mouse on
+# Use mouse to switch windows, adjust panes, etc...
 
 # True color support
 # (True color support only shows effect if your terminal emulator supports true color)
@@ -142,6 +141,7 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-mode-indicator'
 set -g @plugin 'tmux-plugins/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-network-speed'
+# set -g @plugin 'tmux-plugins/tmux-fzf-pane-switch'
 # set -g @plugin 'tmux-plugins/tmux-autoreload'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
@@ -159,6 +159,9 @@ set -g @network_speed_interface 'eno1'
 # set -g @continuum-restore 'on'
 # Other plugins choices :
 # (<prefix> + I to install/upgrade plugins, tmux will freeze for several seconds during install)
+
+# fzf-pane
+# set -g @fzf_pane_switch_bind-key s
 
 # Display online status on your status bar:
 # set -g @plugin 'tmux-plugins/tmux-online-status'
