--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -1,9 +1,8 @@
 # config for tmux
-
-source $PWD/key_binding.conf
-source $PWD/themes.conf
-source $PWD/plugins.conf
-source $PWD/status_bar.conf
+source ~/.config/tmux/config/key_binding.conf
+source ~/.config/tmux/config/themes.conf
+source ~/.config/tmux/config/plugins.conf
+source ~/.config/tmux/config/status_bar.conf
 
 set-option -g default-shell /bin/zsh
 
