--- a/config/plugins.conf
+++ b/config/plugins.conf
@@ -6,8 +6,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-network-speed'
 set -g @plugin 'tmux-plugins/tmux-mode-indicator'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-# set -g @plugin 'tmux-plugins/tmux-fzf-pane-switch'
+# set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-fzf-pane-switch'
 set -g @plugin 'tmux-plugins/tmux-current-pane-hostname'
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'tmux-plugins/tmux-continuum'
@@ -20,7 +20,7 @@ set -g @prefix_highlight_bg 'black' # default is 'colour04'
 set -g @network_speed_interface 'eno1'
 
 # fzf-pane
-# set -g @fzf_pane_switch_bind-key w
+# set -g @fzf_pane_switch_bind-key s
 
 # Display online status on your status bar:
 # set -g @plugin 'tmux-plugins/tmux-online-status'
