--- a/config/plugins.conf
+++ b/config/plugins.conf
@@ -6,7 +6,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-network-speed'
 set -g @plugin 'tmux-plugins/tmux-mode-indicator'
-# set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-fzf-pane-switch'
 set -g @plugin 'tmux-plugins/tmux-current-pane-hostname'
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
